# redun

./: .gitignore  .pre-commit-config.yaml  .run.docker.sh  CHANGELOG.html  Dockerfile  FAQ.html  MANIFEST.in  Makefile  README.md  buildspec.yml  config.html  console.html  context.html  db.html  design.html  developing.html  docker-compose.yml  executors.html  filesystems.html  genindex.html  index.html  lint.sh  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  pytest.sh  requirements-dev.txt  scheduler.html  search.html  searchindex.js  setup.cfg  setup.py  spark.html  tags.html  tasks.html  tox.ini  typing.html  values.html  visualization.html
.codeboarding/: Data_State_Management.md  Execution_Backends.md  User_Interface.md  Workflow_Orchestrator.md  on_boarding.md
.github/workflows/: claude-code-pr-review.yml  publish-docs.yml  release.yml  test_pull_request.yml  tox.yml
_sources/: CHANGELOG.md.txt  config.md.txt  console.md.txt  context.md.txt  db.md.txt  design.md.txt  developing.md.txt  executors.md.txt  filesystems.md.txt  index.md.txt  scheduler.md.txt  spark.md.txt  tasks.md.txt  values.md.txt
_sources/redun/: modules.rst.txt  redun.console.rst.txt  redun.executors.rst.txt  redun.rst.txt
db/: Dockerfile  postgres.sql
docs/: Makefile  release_notes.py  requirements.txt
docs/source/: CHANGELOG.md  CHANGELOG.rst  FAQ.md  FAQ.rst  conf.py  config.md  db.md  design.md  developing.md  executors.md  filesystems.md  index.md  index.rst  scheduler.md  spark.md  tags.md  tasks.md  typing.md  visualization.md
examples/: README.md
examples/01_hello_world/: README 2.md  hello_world 2.py  hello_world.py
examples/02_compile/: README 2.md  README.md  lib 2.c  make 2.py  make.py  make2 2.py  make2.py  prog.c  prog2 2.c
examples/03_scheduler/: Makefile 2  README 2.md  scheduler 2.html  scheduler 2.ipynb  scheduler.html  scheduler.ipynb
examples/04_script/: README 2.md  README.md  workflow.py
examples/05_aws_batch/: README.md  task_with_timeout 2.py  task_with_timeout.py  workflow 2.py  workflow.py
examples/06_bioinfo_batch/: README.md  workflow.py
examples/07_control_flow/: README.md  workflow.py
examples/08_debugging/: README.md  solutions.py  workflow.py
examples/08_gcp_batch/: .dockerignore  workflow.py
examples/allele_freq/: README.md  workflow.py
examples/aws_batch_array_jobs/: README.md  workflow.py
examples/aws_batch_multinode/: README.md  workflow.py
examples/aws_glue/: rdkit_workflow 2.py  rdkit_workflow.py  workflow.py
examples/azure_storage/: README.md  workflow.py
examples/bioinfo_toy/: workflow.py
examples/conda/: Makefile  README.md  my_py27_env.yml  my_py310_redun_env.yml  workflow.py
examples/context/: README.md  workflow.py  workflow2.py
examples/custom_executor_config/: README.md  my_executors.py  workflow.py
examples/custom_values/: README 2.md  workflow.py
examples/debugging/: README.md  workflow.py
examples/docker/: README.md  workflow.py
examples/eager_eval/: README.md  workflow.py
examples/enum/: workflow.py
examples/etl/: workflow.py
examples/federated_task/: Dockerfile  README.md  workflow.py
examples/functools/: README.md  workflow.py
examples/gcp_batch/: README.md  workflow.py
examples/higher_order/: workflow.py
examples/job_info/: workflow.py  workflow2.py
examples/k8s/: 06_bioinfo_batch_workflow.py  README.md  aws_batch_workflow.py  data.tsv  task_with_timeout.py  workflow.py
examples/launch/: README.md
examples/memoization_patterns/: map_reduce.py
examples/modal_workflow/: workflow.py
examples/multiprocess/: README.md  workflow.py
examples/no_prov/: README.md  workflow.py
examples/postgres/: README 2.md  README.md  workflow.py
examples/recursion/: fib.py
examples/scraping/: README.md  workflow.py
examples/scrapping/: README 2.md  README.md  requirements.txt  workflow.py
examples/setup_scheduler/: README.md  workflow 2.py  workflow.py
examples/simple/: simple.py  simple2.py  simple_list.py
examples/subrun/: README.md  workflow.py
examples/tags/: data.txt  workflow.py
examples/testing/: test_workflow.py  workflow.py
examples/thread/: workflow.py
examples/word_count/: README.md  urls.txt  workflow.py
implementation/: evaluation.html  graph_reduction_caching.html  hashing.html
redun/: __init__.py  azure_utils.py  bcoding.py  cli.py  config.py  context.py  db_utils.py  expression.py  federated_tasks.py  file.py  functools.py  glue.py  handle.py  hashing 2.py  hashing.py  job_array 2.py  job_array.py  logging.py  modules.html  namespace 2.py  namespace.py  promise 2.py  promise.py  pytest 2.py  redun.backends.db.html  redun.backends.html  redun.console.html  redun.executors.html  redun.html  scheduler.py  scheduler_config.py  scripting.py  sphinx.py  tags.py  task 2.py  task.py  tools.py  utils.py  value.py  version.py  (+1 more)
redun/backends/: base 2.py  base.py  value_store 2.py  value_store.py
redun/console/: app.py  parser.py  screens.py  style.css  upstream_screen.py  utils.py  widgets.py
redun/executors/: alias.py  aws_batch.py  aws_glue.py  aws_utils 2.py  aws_utils.py  base.py  code_packaging.py  command.py  conda.py  docker.py  gcp_batch.py  gcp_utils.py  glue_oneshot.py.txt  k8s.py  k8s_utils.py  launch.py  local 2.py  local.py  modal_executor.py  postgres.py  s3_utils.py  scratch.py
redun/server/: __init__.py  app.py
redun/tests/: conftest 2.py  conftest.py  isolated_task.py  task_test_helpers.py  test_alias.py  test_args 2.py  test_async.py  test_aws_batch.py  test_aws_glue.py  test_aws_utils.py  test_azure_utils.py  test_bcoding.py  test_cli.py  test_code_packaging.py  test_conda_executor.py  test_config.py  test_console.py  test_context.py  test_dataflow.py  test_db 2.py  test_db.py  test_db_query.py  test_db_utils.py  test_docker_executor.py  test_errors.py  (+46 more)
(+114 files in other folders)
